<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <Button
        android:id="@+id/btn_hello_atlas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/texture_atlas" />

    <Button
        android:id="@+id/btn_json_atlas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/json_atlas" />

    <Button
        android:id="@+id/btn_image_sequence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/image_sequence" />

    <Button
        android:id="@+id/btn_tween_animations"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/tween_animations" />

    <Button
        android:id="@+id/btn_bezier_animation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/bezier_animation" />

    <Button
        android:id="@+id/btn_skeleton_animation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/skeleton_animation" />

    <Button
        android:id="@+id/btn_skeleton_animation_cache"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/skeleton_animation_cache" />

    <Button
        android:id="@+id/btn_coin_explosion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButton"
        android:text="@string/trajectory_animation" />

</LinearLayout>