<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stage_template" />

    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_f15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickRadio"
            android:text="@string/f15" />

        <RadioButton
            android:id="@+id/radio_b52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/b52" />

        <RadioButton
            android:id="@+id/radio_stealth_bomber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/stealth_bomber" />

        <RadioButton
            android:id="@+id/radio_rah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/rah" />

        <RadioButton
            android:id="@+id/radio_harrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/harrier" />

        <RadioButton
            android:id="@+id/radio_v22osprey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClickRadio"
            android:text="@string/v22" />
    </RadioGroup>

</RelativeLayout>